test/sema/pointer-to-rvalue-return.delta.output
pointer-to-rvalue-return.delta:4:14: error: mismatching return type 'int', expected 'int*'
int* foo() { return 42; }
             ^
