test/sema/pointer-to-rvalue-return.delta
// RUN: %check_errors %not %delta -typecheck %s -Wno-unused

// CHECK: [[@LINE+1]]:14: error: mismatching return type 'int', expected 'int*'
int* foo() { return 42; }
